k8s/apps/base/invidious/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: invidious
  namespace: invidious
  labels:
    app: invidious
spec:
  type: ClusterIP
  selector:
    app: invidious
  ports:
    - name: http
      port: 3000
      targetPort: 3000
