k8s/apps/base/invidious/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invidious
  namespace: invidious
  labels:
    app.kubernetes.io/name: invidious
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - inv.internal.kentaro1043.com
      secretName: invidious-tls
  rules:
    - host: inv.internal.kentaro1043.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: invidious
                port:
                  name: http
